--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "JS Backend Workshop @Softuni",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "supervisor ./src/index.js"
   },
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "express": "^4.18.2"
+  },
   "devDependencies": {
-    "nodemon": "^3.0.3"
+    "supervisor": "^0.12.0"
   }
 }
