--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "bcrypt": "^5.1.1",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
-    "mongoose": "^8.1.1",
-    "path": "^0.12.7"
+    "mongoose": "^8.1.1"
   },
   "devDependencies": {
     "supervisor": "^0.12.0"
